testing/framework/resources/Advanced/Failing/mondrian/query6285.e
USA	CA	Redwood City	10197	Cleo Passig	Cleo Passig	F	M	Partial College	$30K - $50K
